# ms8

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml  pytest.ini
.github/: BRANCH_PROTECTION_TEMPLATE.md  CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.md
.github/workflows/: candidate-mypy-diagnostic.yml  ci.yml  codeql.yml  contract-diagnostics.yml  dependency-audit.yml  dependency-review.yml  examples.yml  lock-contract-diagnostics.yml  mcp-governance-apply.yml  mcp-governance-repair.yml  mcp-governance-sync.yml  memory-hybrid-reference.yml  memory-hybrid-windows-parity.yml  phase8-integration-patch.yml  policy-engine-ci.yml  policy-engine-wheels.yml  pytest-diagnostic.yml  pytest-first-failure.yml  release-candidate.yml  release.yml  required-check-compatibility.yml  scheduled-platform-matrix.yml  second-batch-diagnostic.yml  static-diagnostics.yml  third-batch-apply.yml  third-batch-ci-diagnostic.yml  third-batch-finalize.yml  third-batch-inventory.yml  third-batch-source-compat-fix.yml  third-batch-source-snapshot.yml
artifacts/pyc_recovery/: pyc_list.txt
artifacts/pyc_recovery/report/: connect_gap_report.json  connect_gap_report.md
backups/ms8_backup_app_before_restore_20260430/: __init__.py  config.py  main.py
backups/ms8_backup_app_before_restore_20260430/classifier/: __init__.py  context_builder.py  hybrid_classifier.py  llm_classifier.py  rule_classifier.py  threshold_manager.py
backups/ms8_backup_app_before_restore_20260430/extractors/: action_extractor.py  entity_extractor.py
backups/ms8_backup_app_before_restore_20260430/feedback/: __init__.py  feedback_service.py  rule_optimizer.py
backups/ms8_backup_app_before_restore_20260430/integrations/: ollama_client.py
backups/ms8_backup_app_before_restore_20260430/memory/: __init__.py  indexer.py  repository.py  search.py
backups/ms8_backup_app_before_restore_20260430/observability/: logger.py  trace.py
backups/ms8_backup_app_before_restore_20260430/rules/: base.py  (+8 more)
docs/: ARCHITECTURE.md  DATA_MODEL.md  FAQ.md  HYBRID_RETRIEVAL_V1.md  INSTALL_PROFILES.md  LOCAL_WINDOWS_SPLIT_INVENTORY_2026-06-25.md  MS8_MEMORY_FULL_ACCESS_PLAN_2026-06-19.md  PROJECT_MEMORY.md  QUICK_START.md  README.md  RECOVERY_AND_MIGRATION.md  RELEASE_0.2.16.md  RELEASE_NOTES_0.2.11.md  RELEASE_NOTES_0.2.12.md  RELEASE_NOTES_0.2.13.md  RELEASE_NOTES_0.2.14.md  RELEASE_NOTES_0.2.15.md  RELEASE_NOTES_0.2.16.md  RELEASE_NOTES_0.2.17.md  RELEASE_NOTES_0.2.18.md  RELEASE_SECURITY.md  THIRD_BATCH_MEMORY_SAFETY_PLAN.md  THREAT_MODEL.md  TRUSTED_PUBLISHING_SETUP.md  USE_CASES.md  WEEKLY_UPDATE_2026-06-27.md  v0.2.14-final-verification.tmp  v0.2.14-main-verification.tmp
docs/development/: MEMORY_HYBRID_V1_GAP_REVIEW.md  MEMORY_HYBRID_V1_TASKS.md
examples/: README.md  basic_memory.py  isolated_cli.py  isolated_doctor.py  parse_local_text.py  parse_text_document.py
scripts/: apply_mcp_governance_fix.py  audit_installed_environment.py  build_ms8_wheel.sh  build_policy_engine_wheel.sh  check_governance_gate.py  check_memory_hybrid_v1_release_boundary.py  check_no_main_record_bypass.py  check_policy_core_wheel_coverage.py  check_policy_engine_wheel_binary.py  check_release_artifacts.sh  check_single_path.py  clear_release_env.sh  converge_runtime_dirs.py  generate_license.py  import_policy_wheelhouse.sh  install_ms8.sh  ms8_multi_llm_template.yaml  oneoff_strong_dedupe.py  p0_backfill_governance.py  p0_self_check_baseline_request.py  p0_stabilize.py  p1_compression_repair.py  p1_review_queue_closure.py  patch_third_batch_existing.py  phase8_integration_patch.py  policy_attack_sample_report.py  policy_engine_release_local.sh  pre-commit-forbid-internal.sh  publish_pypi.sh  publish_testpypi.sh  release_checklist.py  release_checklist.sh  release_isolated_test.sh  release_smoke.py  run_memory_hybrid_v1_macos_acceptance.py  run_memory_hybrid_v1_trace_parity.py  run_memory_hybrid_v1_windows_parity.py  verify_policy_backend_contract.py
scripts/validation/: run_memory_ledger_macos_acceptance.py  run_memory_ledger_performance.py  run_memory_ledger_platform_case.py  run_memory_ledger_validation.py  run_memory_ledger_windows_acceptance.py
src/ms8/: __init__.py  __main__.py  _compat_fcntl.py  ask.py  cli.py  compression_governance.py  dashboard.py  demo.py  doctor.py  engine.py  format_registry.py  lifecycle.py  memory_safety.py  onboarding.py  paths.py  record_policy.py  recovery.py  recovery_cli.py  review_governance.py  runtime.py  runtime_health.py  service.py  service_platform.py  shortcut.py  watch.py
tests/: conftest.py  test_absorb_parser_chunker_cli.py  test_absorb_repository_and_ingest.py  test_absorb_scope.py  test_admission_compat_and_record_gateway.py  test_agent_native_bug_report.py  test_agent_native_cli_branches_more.py  test_agent_native_init.py  test_agent_native_migrate_policy.py  test_agent_native_onboarding_edges.py  test_agent_native_run.py  test_agent_native_small_model_sim.py  test_agent_native_tasks.py  test_agent_native_verify.py  test_agent_native_verify_tasks_more.py  test_agent_skills_standard_module.py  test_app_classifier_flows.py  test_app_memory_models_search.py  test_app_memory_repository.py  test_app_pipeline_e2e.py  test_app_rules_and_admission.py  test_auto_memory_session_sync.py  test_baseline_request_governance.py  test_built_in_skills_module.py  test_check_governance_gate_policy_attack.py  test_cli.py  test_cli_connect_branches_more.py  test_cli_lifecycle_exit_codes.py  test_cli_ops_branches_more.py  test_cli_ops_dispatch_matrix_more.py  test_cli_top_dispatch_matrix_more.py  test_compression_governance.py  test_connect_bootstrap_helpers.py  test_connect_client_config_more.py  test_connect_common_and_registry.py  test_connect_contracts.py  test_connect_module_and_mcp_server_helpers.py  test_connect_scan_status_verify.py  test_connect_scripts_more.py  test_connect_stdio_server.py  (+242 more)
(+487 files in other folders)
