[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ms8"
version = "0.2.0"
description = "MS8 — local memory system. Memory belongs to you, not to tools."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "whoosh>=2.7.4",
  "PyYAML>=6.0.0",
  "gitpython>=3.1.0",
  "schedule>=1.2.0",
  "requests>=2.31.0",
  "numpy>=1.26.0",
  "jieba>=0.42.1",
  "ollama>=0.4.0",
  "cryptography>=44.0.0",
  "argon2-cffi>=25.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
  "build"
]

[project.scripts]
ms8 = "ms8.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["repo_public"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/ms8/engine_core/tests/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
