[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ms8"
version = "0.2.16"
description = "MS8 — local memory system. Memory belongs to you, not to tools."
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10,<3.14"
dependencies = [
  "whoosh>=2.7.4",
  "PyYAML>=6.0.0",
  "gitpython>=3.1.0",
  "schedule>=1.2.0",
  "requests>=2.31.0",
  "numpy>=1.26.0,<2.5",
  "jieba>=0.42.1",
  "cryptography>=44.0.0",
  "argon2-cffi>=25.0.0",
  "tomli>=2.0.0; python_version < '3.11'"
]

[project.urls]
Homepage = "https://github.com/wdxx1119-create/ms8"
Documentation = "https://github.com/wdxx1119-create/ms8/blob/main/docs/README.md"
Repository = "https://github.com/wdxx1119-create/ms8"
Issues = "https://github.com/wdxx1119-create/ms8/issues"
Changelog = "https://github.com/wdxx1119-create/ms8/blob/main/CHANGELOG.md"
Security = "https://github.com/wdxx1119-create/ms8/blob/main/SECURITY.md"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "build",
  "twine",
  "pip-audit"
]
policy = [
  "ms8-policy-core>=0.1.1,<0.2"
]
llm = [
  "ollama>=0.4.0"
]
absorb = [
  "watchdog>=4.0.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0"
]
ocr = [
  "watchdog>=4.0.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "pytesseract>=0.3.10",
  "pdf2image>=1.17.0",
  "pillow>=10.0.0"
]
# Compatibility alias retained for existing users. Prefer ms8[ocr].
absorb-ocr = [
  "watchdog>=4.0.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "pytesseract>=0.3.10",
  "pdf2image>=1.17.0",
  "pillow>=10.0.0"
]
full = [
  "ms8-policy-core>=0.1.1,<0.2",
  "ollama>=0.4.0",
  "watchdog>=4.0.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "pytesseract>=0.3.10",
  "pdf2image>=1.17.0",
  "pillow>=10.0.0"
]

[project.scripts]
ms8 = "ms8.cli:main"
ms8-recovery = "ms8.recovery_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["ms8.engine_core.tests*"]

[tool.setuptools.package-data]
ms8 = [
  "connect/*.md",
  "connect/config/*.yaml",
  "connect/adapter_registry/*.json"
]

[tool.pytest.ini_options]
testpaths = ["tests", "src/ms8/engine_core/tests"]
addopts = "--strict-markers"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["repo_public"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/ms8/engine_core/tests/*.py" = ["E402"]
# These modules intentionally use conditional/optional import layouts.
"src/ms8/absorb/project_memory/parser.py" = ["I001"]
"src/ms8/absorb/project_memory/watch.py" = ["I001"]
"src/ms8/ask.py" = ["I001"]
"src/ms8/engine_core/local_llm.py" = ["I001"]
"src/ms8/service.py" = ["I001"]
# The two compatibility snapshots are retained for release diagnostics.
"src/ms8/doctor.py" = ["F841"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false

[[tool.mypy.overrides]]
module = [
  "ms8.engine_core.auto_memory",
  "ms8.engine_core.maintenance.self_repair.repair_policies",
]
disable_error_code = ["attr-defined"]
