[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ms8"
version = "0.2.17"
description = "MS8 — local memory system. Memory belongs to you, not to tools."
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10,<3.14"
dependencies = [
  "whoosh>=2.7.4",
  "PyYAML>=6.0.0",
  "gitpython>=3.1.0",
  "schedule>=1.2.0",
  "requests>=2.31.0",
  "numpy>=1.26.0,<2.5",
  "jieba>=0.42.1",
  "cryptography>=44.0.0",
  "argon2-cffi>=25.0.0",
  "tomli>=2.0.0; python_version < '3.11'",
  "tzdata>=2024.1; sys_platform == 'win32'"
]

[project.urls]
Homepage = "https://github.com/wdxx1119-create/ms8"
Documentation = "https://github.com/wdxx1119-create/ms8/blob/main/docs/README.md"
Repository = "https://github.com/wdxx1119-create/ms8"
Issues = "https://github.com/wdxx1119-create/ms8/issues"
Changelog = "https://github.com/wdxx1119-create/ms8/blob/main/CHANGELOG.md"
Security = "https://github.com/wdxx1119-create/ms8/blob/main/SECURITY.md"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "build",
  "twine",
  "pip-audit"
]
policy = [
  "ms8-policy-core>=0.1.0,<0.2"
]
llm = [
  "ollama>=0.4.0"
]
absorb = [
  "watchdog>=4.0.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0"
]
ocr = [
  "watchdog>=4.0.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "pytesseract>=0.3.10",
  "pdf2image>=1.17.0",
  "pillow>=10.0.0"
]
# Compatibility alias retained for existing users. Prefer ms8[ocr].
absorb-ocr = [
  "watchdog>=4.0.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "pytesseract>=0.3.10",
  "pdf2image>=1.17.0",
  "pillow>=10.0.0"
]
full = [
  "ms8-policy-core>=0.1.0,<0.2",
  "ollama>=0.4.0",
  "watchdog>=4.0.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "pytesseract>=0.3.10",
  "pdf2image>=1.17.0",
  "pillow>=10.0.0"
]

[project.scripts]
ms8 = "ms8.cli:main"
ms8-recovery = "ms8.recovery_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ms8 = [
  "resources/*.md",
  "resources/*.json",
  "resources/*.yaml",
  "resources/*.yml",
  "agent_native/*.md",
  "agent_native/*.task",
  "connect/mcp_server/instruction.md",
  "../templates/*.json",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["src/ms8/engine_core/private_*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
exclude = "src/ms8/engine_core/private_.*\\.py"

[tool.pytest.ini_options]
addopts = "--cov=src/ms8 --cov-report=term-missing --cov-report=xml:coverage.xml"
testpaths = ["tests"]
markers = [
  "live_provider: opt-in test that may call a real configured model provider",
]

[tool.coverage.run]
branch = true
source = ["src/ms8"]
omit = [
  "src/ms8/engine_core/private_*.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
